# shikanoko

./: .dprint.jsonc  Cargo.toml  Dockerfile  LICENSE  README.md  dprint.json  shikanoko.bash
.devcontainer/: devcontainer-lock.json  devcontainer.json  postCreate.sh
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/: main.rs
