[package]
name = "shikanoko"
version = "0.1.2"
authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
edition = "2021"
license = "MIT"
description = "Outputs しか / のこ / こし / たん randomly until repeating しかのこのこのここしたんたん with n times."

[dependencies]
rand = "0.9.0"

# cargo run-script <script name>
[package.metadata.scripts]
format = "bash -c \"eval 'cargo run-script format:'{dprint,rustfmt,clippy}'&&' :\""
"format:dprint" = "dprint fmt"
"format:rustfmt" = "cargo fmt"
"format:clippy" = "cargo clippy --fix --allow-dirty --allow-staged"
